# Interceptor

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: MainWindow.cpp  MainWindow.h  Vision.cpp  Vision.h  main.cpp
src/controllers/: AppController.cpp  AppController.h  CameraController.cpp  CameraController.h
src/model/: AlignmentModel.cpp  AlignmentModel.h  CameraWorker.cpp  CameraWorker.h  Enums.h  FrameRenderer.h  Location.mm  Vision.cpp  Vision.h
src/skyfield/: Location.h  Location.mm
src/skywatcher/: AlignmentModel.cpp  AlignmentModel.h  Skywatcher.cpp  Skywatcher.h  WaveMount.cpp  WaveMount.h
src/ui/: CameraTab.cpp  CameraTab.h  MainWindow.cpp  MainWindow.h  MountTab.cpp  MountTab.h
src/zwo/: CameraThread.cpp  CameraThread.h  moc_CameraThread.cpp
